--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Screen Bouncer</title>
 </head>
 <body>
-    <div class="score">
-        <div id="player-score">0</div>
-        <div id="computer-score">0</div>
-    </div>
-    <div class="ball" id="ball"></div>
-    <div class="paddle-left" id="player-paddle"></div>
-    <div class="paddle-right" id="computer-paddle"></div>
+        <div class="score">
+            <div id="player-score">0</div>
+            <div id="computer-score">0</div>
+        </div>
+        <div class="ball" id="ball"></div>
+        <div class="paddle left" id="player-paddle"></div>
+        <div class="paddle right" id="computer-paddle"></div>
 </body>
 </html>
